<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
               >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_dialog_title"
            android:textColor="#ffffff"
            android:text="@string/insert_item"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:padding="15dp"
    />
    <TextView
            android:id="@+id/textView_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"

    />

    <EditText
            android:id="@+id/edittext_shopping_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"

    >


    </EditText>

    <TextView
            android:id="@+id/textView_itemAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"


    />

    <EditText
            android:id="@+id/edittext_shopping_list_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"

    >

    </EditText>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textSize="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"


    />

    <Spinner
            android:spinnerMode="dialog"
            android:id="@+id/spinnerCustom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textAlignment="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"

    />
    <Button
            android:id="@+id/button_shoppingList_add_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/edittext_shopping_list_amount"
            android:text="@string/finish"
            android:background="#000000"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="0dp"
    />


</LinearLayout>