<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    android:paddingTop="1sp"
    android:paddingBottom="1sp"
    android:clickable="true"
    android:background="@drawable/border"
    android:orientation="vertical">
  
  <ImageView
      android:id="@+id/imageView_thumbnail_recipe_image"
      android:background="@drawable/border"
      android:src="@drawable/placeholder"
      android:layout_width="100sp"
      android:layout_height="100sp"
      android:layout_alignParentTop="true"
      android:layout_marginRight="10sp"/>
  
  <TextView
      android:id="@+id/textView_recipe_name"
      android:text="@string/textView_recipe_name"
      android:textSize="16sp"
      android:textStyle="bold"
      android:textColor="@color/header_text_color"
      android:singleLine="true"
      android:ellipsize="end"
      android:layout_marginTop="15sp"
      android:layout_toRightOf="@id/imageView_thumbnail_recipe_image"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  
  <TextView
      android:id="@+id/textView_short_recipe_description"
      android:text="@string/text_short_recipe_description"
      android:textColor="@color/header_text_color"
      android:textSize="13sp"
      android:singleLine="true"
      android:ellipsize="end"
      android:layout_marginTop="1sp"
      android:layout_below="@id/textView_recipe_name"
      android:layout_toRightOf="@id/imageView_thumbnail_recipe_image"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  
  <TextView
      android:id="@+id/cookingTime"
      android:layout_below="@id/textView_short_recipe_description"
      android:textColor="@color/header_text_color"
      android:layout_toRightOf="@id/imageView_thumbnail_recipe_image"
      android:textSize="11sp"
      android:singleLine="true"
      android:ellipsize="end"
      android:text="@string/cookingtime"
      android:layout_marginTop="1sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  
  <TextView
      android:id="@+id/healthRating"
      android:layout_below="@id/textView_short_recipe_description"
      android:textColor="@color/header_text_color"
      android:textSize="11sp"
      android:singleLine="true"
      android:ellipsize="end"
      android:text=""
      android:layout_marginTop="1sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"/>
</RelativeLayout>