<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/background_weekplan"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    android:orientation="vertical"
    android:id="@+id/rvparent">
  <RelativeLayout
      android:id="@+id/relativelayout_recipe_container"
      android:layout_width="match_parent"
      android:layout_height="100sp"
      android:background="@drawable/border"
      android:layout_alignParentTop="true"
      android:paddingLeft="10sp"
      android:clickable="true"
      android:layout_toLeftOf="@+id/imageButton_remove_recipe_from_planning"
      android:layout_toStartOf="@+id/imageButton_remove_recipe_from_planning">
  
  <ImageView
      android:id="@+id/imageView_thumbnail_recipe_image"
      android:background="@drawable/border"
      android:src="@drawable/placeholder"
      android:layout_width="100sp"
      android:layout_height="100sp"
      android:layout_alignParentTop="true"
      
      android:paddingRight="10sp"
      />
  
  <TextView
      android:id="@+id/textView_recipe_name"
      android:text="@string/textView_recipe_name"
      android:textSize="16sp"
      android:textStyle="bold"
      android:textColor="@color/header_text_color"
      android:singleLine="true"
      android:ellipsize="end"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/textView_short_recipe_description"
      android:layout_toRightOf="@+id/imageView_thumbnail_recipe_image"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"/>

  <TextView
      android:id="@+id/textView_short_recipe_description"
      android:text="@string/text_short_recipe_description"
      android:textColor="@color/header_text_color"
      android:textSize="13sp"
      android:singleLine="true"
      android:ellipsize="end"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_alignLeft="@+id/textView_recipe_name"
      android:layout_alignStart="@+id/textView_recipe_name"
/>
  
  <TextView
      android:id="@+id/cookingTime"
      android:layout_below="@id/textView_short_recipe_description"
      android:textColor="@color/header_text_color"
      android:textSize="11sp"
      android:singleLine="true"
      android:ellipsize="end"
      android:text="@string/cookingtime"
      android:layout_marginTop="1sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView_short_recipe_description"
      android:layout_alignStart="@+id/textView_short_recipe_description"/>
  </RelativeLayout>
  
  <ImageButton
      android:id="@+id/imageButton_remove_recipe_from_planning"
      android:layout_width="wrap_content"
      android:layout_height="100sp"
      android:src="@drawable/ic_action_remove"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:background="@drawable/border"
    
      />
</RelativeLayout>